--- a/index.html
+++ b/index.html
@@ -2,58 +2,111 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>홀짝 게임 (확률 조작)</title>
+  <title>🎲 홀짝 도박 시뮬레이터</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Pretendard", Arial, sans-serif;
+      background: linear-gradient(to bottom right, #2b5876, #4e4376);
+      color: white;
       text-align: center;
-      margin-top: 60px;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
     }
-    button {
-      font-size: 18px;
-      padding: 10px 20px;
-      margin: 5px;
-      cursor: pointer;
+
+    h1 {
+      margin-top: 40px;
+      font-size: 38px;
+      letter-spacing: 1px;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
+
+    .container {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px;
+      margin: 40px auto;
+      border-radius: 15px;
+      width: 360px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    }
+
     input {
       font-size: 18px;
-      padding: 5px;
-      width: 120px;
+      padding: 8px;
+      width: 140px;
       text-align: right;
+      border-radius: 5px;
+      border: none;
+      outline: none;
     }
-    #result {
-      margin-top: 20px;
-      font-size: 22px;
+
+    button {
+      font-size: 20px;
+      padding: 10px 25px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      background-color: #ffb703;
+      color: #222;
+      cursor: pointer;
+      transition: 0.2s;
       font-weight: bold;
     }
-    #balance {
-      margin-top: 20px;
+
+    button:hover {
+      background-color: #ffd166;
+      transform: scale(1.05);
+    }
+
+    #result {
+      margin-top: 25px;
       font-size: 20px;
       font-weight: bold;
-      color: darkblue;
+      color: #fff;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+      line-height: 1.6em;
     }
+
+    #balance {
+      font-size: 22px;
+      font-weight: bold;
+      color: #ffd166;
+    }
+
     #stats {
+      margin-top: 20px;
+      font-size: 18px;
+      color: #d3f8e2;
+    }
+
+    #resetMsg {
+      color: #f25f5c;
       margin-top: 15px;
       font-size: 18px;
-      color: darkgreen;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>홀짝 게임</h1>
-  <p>현재 금액: <span id="balance">500000</span> 원</p>
-  <p>
-    베팅 금액: <input type="number" id="bet" value="10000" min="1">
-  </p>
-  <p>홀 또는 짝을 선택하세요</p>
-  <button onclick="play('홀')">홀</button>
-  <button onclick="play('짝')">짝</button>
+  <h1>🎲 홀짝 도박 시뮬레이터</h1>
+  <div class="container">
+    <p>💰 현재 금액: <span id="balance">500000</span> 원</p>
+    <p>
+      베팅 금액: 
+      <input type="number" id="bet" value="10000" min="1">
+    </p>
+    <p>홀 또는 짝을 선택하세요</p>
+    <button onclick="play('홀')">홀</button>
+    <button onclick="play('짝')">짝</button>
 
-  <div id="result"></div>
-  <div id="stats"></div>
+    <div id="result"></div>
+    <div id="stats"></div>
+    <div id="resetMsg"></div>
+  </div>
 
   <script>
-    let balance = 500000; // 초기 지원금
+    let initialBalance = 500000; // 초기 지원금
+    let balance = initialBalance;
     let totalGames = 0;
     let winCount = 0;
     let loseStreak = 0; // 연속 실패 횟수
@@ -61,6 +114,7 @@
     function play(choice) {
       const betAmount = parseInt(document.getElementById("bet").value);
 
+      // 입력 검증
       if (isNaN(betAmount) || betAmount <= 0) {
         alert("베팅 금액을 올바르게 입력하세요!");
         return;
@@ -69,7 +123,6 @@
         alert("보유 금액보다 큰 금액은 베팅할 수 없습니다!");
         return;
       }
-      // 새 조건: 보유 금액이 최소 3배 손실을 감당 못하면 베팅 불가
       if (betAmount * 3 > balance) {
         alert("보유 금액이 부족합니다! 최소한 베팅 금액의 3배 이상 있어야 합니다.");
         return;
@@ -77,47 +130,54 @@
 
       // 확률 설정
       let winChance = 0.3; // 기본 성공 확률 30%
-      if (loseStreak >= 5) {
-        winChance = 0.7; // 연속 5번 실패하면 성공 확률 70%로 상승
-      }
+      if (loseStreak >= 5) winChance = 0.7; // 연속 5번 실패 시 70%
 
-      // 무작위 뽑기
       const random = Math.random();
-      let isWin = random < winChance;
-
+      const isWin = random < winChance;
       totalGames++;
 
       let message = "";
 
       if (isWin) {
-        // 성공: 1.5~2배 랜덤 이익
-        const multiplier = (Math.random() * 0.5 + 1.5).toFixed(2);
+        const multiplier = (Math.random() * 0.5 + 1.5).toFixed(2); // 1.5~2배
         const gain = Math.floor(betAmount * multiplier);
         balance += gain;
         winCount++;
-        loseStreak = 0; // 실패 연속 초기화
+        loseStreak = 0;
         message = `🎉 승리! 베팅 ${betAmount}원 × ${multiplier}배 = +${gain}원 획득`;
       } else {
-        // 실패: 3~4배 랜덤 손실
-        const multiplier = (Math.random() * 1 + 3).toFixed(2);
+        const multiplier = (Math.random() * 1 + 3).toFixed(2); // 3~4배 손실
         const loss = Math.floor(betAmount * multiplier);
         balance -= loss;
         loseStreak++;
-        message = `😢 패배... 베팅 ${betAmount}원 × ${multiplier}배 = -${loss}원 손실 (연속 실패 ${loseStreak}회)`;
+        message = `💀 패배... ${betAmount}원 × ${multiplier}배 = -${loss}원 손실<br>연속 실패 ${loseStreak}회`;
       }
 
-      // 승률 계산
-      const winRate = ((winCount / totalGames) * 100).toFixed(2);
+      const winRate = totalGames > 0 ? ((winCount / totalGames) * 100).toFixed(2) : 0;
 
       document.getElementById("result").innerHTML = message;
-      document.getElementById("balance").textContent = balance;
+      document.getElementById("balance").textContent = balance.toLocaleString();
       document.getElementById("stats").innerHTML =
-        `총 게임 수: ${totalGames} | 승리 수: ${winCount} | 승률: ${winRate}%`;
+        `🎮 총 게임: ${totalGames} | 🏆 승리: ${winCount} | 🎯 승률: ${winRate}%`;
 
-      // 파산 체크
+      // 파산 시 자동 리셋
       if (balance <= 0) {
-        document.getElementById("result").innerHTML += "<br><br>💀 모든 돈을 잃었습니다!";
+        document.getElementById("resetMsg").innerHTML = "⚠️ 파산했습니다! 게임이 초기화됩니다...";
+        setTimeout(resetGame, 2000);
+      } else {
+        document.getElementById("resetMsg").innerHTML = "";
       }
+    }
+
+    function resetGame() {
+      balance = initialBalance;
+      totalGames = 0;
+      winCount = 0;
+      loseStreak = 0;
+      document.getElementById("balance").textContent = balance.toLocaleString();
+      document.getElementById("result").innerHTML = "";
+      document.getElementById("stats").innerHTML = "";
+      document.getElementById("resetMsg").innerHTML = "";
     }
   </script>
 </body>
