--- a/index.html
+++ b/index.html
@@ -104,17 +104,24 @@
     <div id="resetMsg"></div>
   </div>
 
+  <!-- 🎵 효과음 -->
+  <audio id="winSound" src="https://cdn.pixabay.com/download/audio/2021/08/04/audio_3b1f09ef1a.mp3?filename=success-1-6297.mp3"></audio>
+  <audio id="loseSound" src="https://cdn.pixabay.com/download/audio/2021/08/09/audio_c3c31d99b1.mp3?filename=error-126627.mp3"></audio>
+
   <script>
-    let initialBalance = 500000; // 초기 지원금
+    let initialBalance = 500000;
     let balance = initialBalance;
     let totalGames = 0;
     let winCount = 0;
-    let loseStreak = 0; // 연속 실패 횟수
+    let loseStreak = 0;
+
+    const winSound = document.getElementById("winSound");
+    const loseSound = document.getElementById("loseSound");
 
     function play(choice) {
-      const betAmount = parseInt(document.getElementById("bet").value);
+      const betInput = document.getElementById("bet");
+      let betAmount = parseInt(betInput.value);
 
-      // 입력 검증
       if (isNaN(betAmount) || betAmount <= 0) {
         alert("베팅 금액을 올바르게 입력하세요!");
         return;
@@ -123,34 +130,36 @@
         alert("보유 금액보다 큰 금액은 베팅할 수 없습니다!");
         return;
       }
-      if (betAmount * 3 > balance) {
-        alert("보유 금액이 부족합니다! 최소한 베팅 금액의 3배 이상 있어야 합니다.");
+      if (betAmount * 2 > balance) {
+        alert("보유 금액이 부족합니다! 최소한 베팅 금액의 2배 이상 있어야 합니다.");
         return;
       }
 
-      // 확률 설정
-      let winChance = 0.3; // 기본 성공 확률 30%
-      if (loseStreak >= 5) winChance = 0.7; // 연속 5번 실패 시 70%
+      // 확률 조정
+      let winChance = 0.3;
+      if (loseStreak >= 5) winChance = 0.7;
 
-      const random = Math.random();
-      const isWin = random < winChance;
+      const isWin = Math.random() < winChance;
       totalGames++;
 
       let message = "";
 
       if (isWin) {
-        const multiplier = (Math.random() * 0.5 + 1.5).toFixed(2); // 1.5~2배
-        const gain = Math.floor(betAmount * multiplier);
+        const gain = betAmount * 2;
         balance += gain;
         winCount++;
         loseStreak = 0;
-        message = `🎉 승리! 베팅 ${betAmount}원 × ${multiplier}배 = +${gain}원 획득`;
+        winSound.currentTime = 0;
+        winSound.play();
+        message = `🎉 승리! +${gain.toLocaleString()}원 획득<br>💵 다음 베팅금액이 2배(${(betAmount * 2).toLocaleString()}원)로 증가!`;
+        betInput.value = betAmount * 2; // 성공 시 다음 베팅 2배 증가
       } else {
-        const multiplier = (Math.random() * 1 + 3).toFixed(2); // 3~4배 손실
-        const loss = Math.floor(betAmount * multiplier);
+        const loss = betAmount * 3;
         balance -= loss;
         loseStreak++;
-        message = `💀 패배... ${betAmount}원 × ${multiplier}배 = -${loss}원 손실<br>연속 실패 ${loseStreak}회`;
+        loseSound.currentTime = 0;
+        loseSound.play();
+        message = `💀 패배... -${loss.toLocaleString()}원 손실<br>연속 실패 ${loseStreak}회`;
       }
 
       const winRate = totalGames > 0 ? ((winCount / totalGames) * 100).toFixed(2) : 0;
@@ -160,9 +169,9 @@
       document.getElementById("stats").innerHTML =
         `🎮 총 게임: ${totalGames} | 🏆 승리: ${winCount} | 🎯 승률: ${winRate}%`;
 
-      // 파산 시 자동 리셋
+      // 파산 시 리셋
       if (balance <= 0) {
-        document.getElementById("resetMsg").innerHTML = "⚠️ 파산했습니다! 게임이 초기화됩니다...";
+        document.getElementById("resetMsg").innerHTML = "⚠️ 파산했습니다! 게임이 2초 뒤 초기화됩니다...";
         setTimeout(resetGame, 2000);
       } else {
         document.getElementById("resetMsg").innerHTML = "";
@@ -178,6 +187,7 @@
       document.getElementById("result").innerHTML = "";
       document.getElementById("stats").innerHTML = "";
       document.getElementById("resetMsg").innerHTML = "";
+      document.getElementById("bet").value = 10000;
     }
   </script>
 </body>
