--- a/index.html
+++ b/index.html
@@ -1,193 +1,140 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>🎲 홀짝 도박 시뮬레이터</title>
-  <style>
-    body {
-      font-family: "Pretendard", Arial, sans-serif;
-      background: linear-gradient(to bottom right, #2b5876, #4e4376);
-      color: white;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-    }
-
-    h1 {
-      margin-top: 40px;
-      font-size: 38px;
-      letter-spacing: 1px;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
-    }
-
-    .container {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 30px;
-      margin: 40px auto;
-      border-radius: 15px;
-      width: 360px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-    }
-
-    input {
-      font-size: 18px;
-      padding: 8px;
-      width: 140px;
-      text-align: right;
-      border-radius: 5px;
-      border: none;
-      outline: none;
-    }
-
-    button {
-      font-size: 20px;
-      padding: 10px 25px;
-      margin: 10px;
-      border: none;
-      border-radius: 8px;
-      background-color: #ffb703;
-      color: #222;
-      cursor: pointer;
-      transition: 0.2s;
-      font-weight: bold;
-    }
-
-    button:hover {
-      background-color: #ffd166;
-      transform: scale(1.05);
-    }
-
-    #result {
-      margin-top: 25px;
-      font-size: 20px;
-      font-weight: bold;
-      color: #fff;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-      line-height: 1.6em;
-    }
-
-    #balance {
-      font-size: 22px;
-      font-weight: bold;
-      color: #ffd166;
-    }
-
-    #stats {
-      margin-top: 20px;
-      font-size: 18px;
-      color: #d3f8e2;
-    }
-
-    #resetMsg {
-      color: #f25f5c;
-      margin-top: 15px;
-      font-size: 18px;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>홀짝 도박 시뮬레이션</title>
+<style>
+  body {
+    font-family: "Arial", sans-serif;
+    background: linear-gradient(135deg, #2b5876, #4e4376);
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+    transition: background 0.5s ease;
+  }
+  h1 { font-size: 28px; margin-bottom: 10px; }
+  #balance { font-size: 24px; margin: 10px; }
+  #result { font-size: 20px; margin: 20px; transition: all 0.5s ease; }
+  input[type="number"] {
+    padding: 10px; border-radius: 5px; border: none; font-size: 16px; width: 150px; text-align: center;
+  }
+  button {
+    padding: 12px 20px;
+    margin: 10px;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    background-color: #6a11cb;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  button:hover { transform: scale(1.1); background-color: #2575fc; }
+  .flash {
+    animation: flash 0.5s;
+  }
+  @keyframes flash {
+    0% { background: #00ff88; }
+    100% { background: linear-gradient(135deg, #2b5876, #4e4376); }
+  }
+</style>
 </head>
 <body>
-  <h1>🎲 홀짝 도박 시뮬레이터</h1>
-  <div class="container">
-    <p>💰 현재 금액: <span id="balance">500000</span> 원</p>
-    <p>
-      베팅 금액: 
-      <input type="number" id="bet" value="10000" min="1">
-    </p>
-    <p>홀 또는 짝을 선택하세요</p>
-    <button onclick="play('홀')">홀</button>
-    <button onclick="play('짝')">짝</button>
-
-    <div id="result"></div>
-    <div id="stats"></div>
-    <div id="resetMsg"></div>
+  <h1>🎲 홀짝 도박 시뮬레이션 🎲</h1>
+  <div id="balance">💰 보유 금액: 500,000원</div>
+  <div>
+    <input type="number" id="bet" placeholder="배팅 금액 입력" min="1">
   </div>
+  <div>
+    <button onclick="playGame('홀')">홀</button>
+    <button onclick="playGame('짝')">짝</button>
+  </div>
+  <div id="result"></div>
+  <div id="probability">현재 성공 확률: 35%</div>
 
-  <!-- 🎵 효과음 -->
-  <audio id="winSound" src="https://cdn.pixabay.com/download/audio/2021/08/04/audio_3b1f09ef1a.mp3?filename=success-1-6297.mp3"></audio>
-  <audio id="loseSound" src="https://cdn.pixabay.com/download/audio/2021/08/09/audio_c3c31d99b1.mp3?filename=error-126627.mp3"></audio>
+  <!-- 효과음 -->
+  <audio id="winSound" src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg" preload="auto"></audio>
+  <audio id="loseSound" src="https://actions.google.com/sounds/v1/cartoon/boing.ogg" preload="auto"></audio>
 
   <script>
-    let initialBalance = 500000;
-    let balance = initialBalance;
-    let totalGames = 0;
-    let winCount = 0;
-    let loseStreak = 0;
+    let balance = 500000;
+    let failCount = 0;
+    let winRate = 0.35; // 초기 성공 확률 35%
 
+    const balanceDisplay = document.getElementById("balance");
+    const resultDisplay = document.getElementById("result");
+    const probabilityDisplay = document.getElementById("probability");
     const winSound = document.getElementById("winSound");
     const loseSound = document.getElementById("loseSound");
 
-    function play(choice) {
-      const betInput = document.getElementById("bet");
-      let betAmount = parseInt(betInput.value);
+    function playGame(choice) {
+      const bet = Number(document.getElementById("bet").value);
 
-      if (isNaN(betAmount) || betAmount <= 0) {
-        alert("베팅 금액을 올바르게 입력하세요!");
-        return;
-      }
-      if (betAmount > balance) {
-        alert("보유 금액보다 큰 금액은 베팅할 수 없습니다!");
-        return;
-      }
-      if (betAmount * 2 > balance) {
-        alert("보유 금액이 부족합니다! 최소한 베팅 금액의 2배 이상 있어야 합니다.");
+      if (bet <= 0 || isNaN(bet)) {
+        alert("배팅 금액을 입력하세요!");
         return;
       }
 
-      // 확률 조정
-      let winChance = 0.3;
-      if (loseStreak >= 5) winChance = 0.7;
+      if (bet > balance * 2) {
+        alert("⚠️ 배팅 금액은 보유금의 2배 이하여야 합니다!");
+        return;
+      }
 
-      const isWin = Math.random() < winChance;
-      totalGames++;
+      if (balance <= bet * 3) {
+        alert("⚠️ 보유금이 부족하여 배팅할 수 없습니다!");
+        return;
+      }
 
-      let message = "";
+      const random = Math.random();
+      const outcome = random < winRate ? choice : (choice === '홀' ? '짝' : '홀');
+      const isWin = choice === outcome;
+
+      document.body.classList.remove("flash");
 
       if (isWin) {
-        const gain = betAmount * 2;
+        const gain = bet * 2;
         balance += gain;
-        winCount++;
-        loseStreak = 0;
+        resultDisplay.innerHTML = `✅ 승리! ${gain.toLocaleString()}원 획득!`;
         winSound.currentTime = 0;
         winSound.play();
-        message = `🎉 승리! +${gain.toLocaleString()}원 획득<br>💵 다음 베팅금액이 2배(${(betAmount * 2).toLocaleString()}원)로 증가!`;
-        betInput.value = betAmount * 2; // 성공 시 다음 베팅 2배 증가
+        failCount = 0;
+        winRate = Math.max(0.25, winRate - 0.02); // 승리 시 약간 확률 낮춤
+        document.body.classList.add("flash");
       } else {
-        const loss = betAmount * 3;
+        const loss = bet * 3;
         balance -= loss;
-        loseStreak++;
+        resultDisplay.innerHTML = `❌ 패배... ${loss.toLocaleString()}원 손실`;
         loseSound.currentTime = 0;
         loseSound.play();
-        message = `💀 패배... -${loss.toLocaleString()}원 손실<br>연속 실패 ${loseStreak}회`;
+        failCount++;
+        if (failCount >= 5) {
+          winRate = Math.min(0.5, winRate + 0.1); // 실패 5회 시 확률 증가
+          failCount = 0;
+        }
       }
 
-      const winRate = totalGames > 0 ? ((winCount / totalGames) * 100).toFixed(2) : 0;
+      balanceDisplay.innerHTML = `💰 보유 금액: ${balance.toLocaleString()}원`;
+      probabilityDisplay.innerHTML = `현재 성공 확률: ${(winRate * 100).toFixed(1)}%`;
 
-      document.getElementById("result").innerHTML = message;
-      document.getElementById("balance").textContent = balance.toLocaleString();
-      document.getElementById("stats").innerHTML =
-        `🎮 총 게임: ${totalGames} | 🏆 승리: ${winCount} | 🎯 승률: ${winRate}%`;
-
-      // 파산 시 리셋
+      // 파산 or 목표 달성 시 초기화
       if (balance <= 0) {
-        document.getElementById("resetMsg").innerHTML = "⚠️ 파산했습니다! 게임이 2초 뒤 초기화됩니다...";
-        setTimeout(resetGame, 2000);
-      } else {
-        document.getElementById("resetMsg").innerHTML = "";
+        alert("💀 파산하셨습니다! 다시 시작합니다.");
+        resetGame();
+      } else if (balance >= 5000000) {
+        alert("🎉 축하합니다! 5,000,000원 달성! 게임이 초기화됩니다.");
+        resetGame();
       }
     }
 
     function resetGame() {
-      balance = initialBalance;
-      totalGames = 0;
-      winCount = 0;
-      loseStreak = 0;
-      document.getElementById("balance").textContent = balance.toLocaleString();
-      document.getElementById("result").innerHTML = "";
-      document.getElementById("stats").innerHTML = "";
-      document.getElementById("resetMsg").innerHTML = "";
-      document.getElementById("bet").value = 10000;
+      balance = 500000;
+      failCount = 0;
+      winRate = 0.35;
+      balanceDisplay.innerHTML = `💰 보유 금액: ${balance.toLocaleString()}원`;
+      probabilityDisplay.innerHTML = `현재 성공 확률: ${(winRate * 100).toFixed(1)}%`;
+      resultDisplay.innerHTML = "";
+      document.body.style.background = "linear-gradient(135deg, #2b5876, #4e4376)";
     }
   </script>
 </body>
